--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "test": "echo \"No tests yet\" && exit 0"
   },
   "keywords": [],
-  "author": "",
+  "author": "Dr Vinod Walwante",
   "license": "ISC",
-  "description": "",
+  "description": "Full-stack book scraper using Playwright and React by Dr Vinod Walwante",
   "dependencies": {
     "axios": "^1.11.0",
     "cors": "^2.8.5",
